--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo '11jjjjj1'",
+    "demo": "echo '11jjjjj1'",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "test": "react-scripts test --env=jsdom",
+    "lint": "eslint src",
+    "lint:create": "eslint --init"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "csv-loader": "^3.0.3",
+    "eslint": "^7.16.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.6",
@@ -37,7 +41,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test"
+      "pre-commit": "npm run demo && lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
