--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "test": "react-scripts test --env=jsdom",
-    "lint": "eslint src",
+    "lint": "eslint --fix src",
     "lint:create": "eslint --init"
   },
   "keywords": [],
