--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "test": "react-scripts test --env=jsdom",
-    "lint": "eslint src",
+    "lint": "eslint --fix src",
     "lint:create": "eslint --init"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "csv-loader": "^3.0.3",
